src/style.css
@font-face {
    font-family: SecularOne;
    src: url(./fonts/SecularOne-Regular.ttf);
}

:root {
    --background-color: #171A48 ;
    --text-color: #D8C183;
    --hover-color: #607EA3;
    --button-color: #E5E3D7;
}

button {
    width: 4em;
    background: transparent;
    color: var(--button-color);
    border: 0;
}

button:hover {
    cursor: pointer;
    color: var(--hover-color);
}

.timer {
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    flex-grow: 9;
    border: 6px solid var(--button-color);
    border-radius: 25px;
    margin: 10px;
}

.timer img {
    width: 2em;
    align-self: end;
}

.timer h1 {
    font-size: 2.25em;
    margin: 0;
}

.timer h2, h4 {
    margin: 0;
}

.timer button {
    margin: 20px;
    width: 6em;
}

.timer__header {
    font-size: xx-large;
    /*margin-left: 15px;*/
}

.timer__header img {
    margin: 0 0.5em 0.5em 0;
    width:5em;
}

.timer__segments {
    display: flex;
    align-items: center;
    justify-content: center;
}

.timer__segments button {
    margin: 12px;
    width: 4em;
}

.stopwatch {
    display: flex;
    align-items: center;
}

.pre-countdown-dialog {
    border-radius: 10px;
    background: var(--background-color);
    color: rgb(63,152,199);
    font-size: xxx-large;
}

.menu {
    max-height: 20em;
    overflow: scroll;
    align-self: center;
}

.menu__hidden {
    display: none;
}

.menu-item {
    display: flex;
    justify-content: space-around;
    align-items: center;
}

.menu-item__workout {
    width: 80%;
    margin: 0.2em;
    padding: 0.3em;
    border: 1px solid grey;
    border-radius: 10px;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.menu-item__workout button {
    width: 2.3em;
}

.menu-item__workout:hover {
    cursor: pointer;
    background-color: var(--hover-color);
}

.add-workout-dialog {
    background-color: var(--background-color);
    color: var(--text-color);
}

.add-workout-dialog__header {
    text-align: right;
}

.add-workout-dialog__form {
    text-align: left;
}

.add-workout-dialog__form__segments {
    padding: 10px;
    margin: 10px;
}

.add-workout-dialog__footer {
    margin: 10px;
}

.form-input {
    margin: 8px;
    display: flex;
    justify-content: space-between;
}

.form-input label {
    margin-right: 30px;
}

.add-workout-dialog button {
    width: 3em;
}

.form-input button {
    width: 2em;
}

.add-workout-dialog__footer button {
    width: 4em;
}

.CircularProgressbar {
    height: 25em;
    margin: 20px;
}

